--- a/Source/Angelfish.AfxStudio/App.xaml
+++ b/Source/Angelfish.AfxStudio/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Angelfish.AfxStudio"
+             Startup="Application_Startup"
              StartupUri="AppWindow.xaml">
     <Application.Resources>
          <!-- TBD -->
