Add select / drag for component operator views
Added logic to the workflow design surface to support
the selection and repositioning of component operators
that are present on the design surface.

--- a/Source/Angelfish.AfxSystem.A.Common.Ui/Workflows/AfxWorkflowView.xaml
+++ b/Source/Angelfish.AfxSystem.A.Common.Ui/Workflows/AfxWorkflowView.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <ScrollViewer x:Name="_ScrollViewer_Control" AllowDrop="True" DragEnter="_ScrollViewer_Control_DragEnter" DragOver="_ScrollViewer_Control_DragOver" Drop="_ScrollViewer_Control_Drop">
-            <Grid x:Name="_ScrollViewer_Content" Background="DarkGray"/>
+            <Grid x:Name="_ScrollViewer_Content" Background="DarkGray" MouseLeftButtonDown="_ScrollViewer_Content_MouseLeftButtonDown" MouseLeftButtonUp="_ScrollViewer_Content_MouseLeftButtonUp" MouseMove="_ScrollViewer_Content_MouseMove"/>
         </ScrollViewer>
     </Grid>
 </UserControl>
