Add support for saving/loading workflows
Added support for saving and loading workflows
from JSON formatted files, using the serializer
component developed for the tutorial.

--- a/Source/Angelfish.AfxStudio/AppWindow.xaml
+++ b/Source/Angelfish.AfxStudio/AppWindow.xaml
@@ -49,7 +49,7 @@
             </Menu>
             <!-- TODO: Add toolbar here, later... -->
         </Grid>
-        <xcad:DockingManager x:Name="_Docking_Manager" Grid.Row="1" AllowMixedOrientation="True" BorderBrush="Black" BorderThickness="1">
+        <xcad:DockingManager x:Name="_Docking_Manager" Grid.Row="1" AllowMixedOrientation="True" BorderBrush="Black" BorderThickness="1" ActiveContentChanged="_Docking_Manager_ActiveContentChanged">
             <xcad:LayoutRoot x:Name="_Docking_Layout_Root">
                 <xcad:LayoutPanel Orientation="Horizontal">
                     <xcad:LayoutAnchorablePane DockWidth="200">
